--- a/src/com/cozybooks/view/styles.css
+++ b/src/com/cozybooks/view/styles.css
@@ -145,7 +145,7 @@
 
 /* Sidebar */
 .sidebar {
-    -fx-background-color: #f3f6f4;
+    -fx-background-color: #ede3e9;
     -fx-background-radius: 0 15 15 0;
 }
 
@@ -158,7 +158,7 @@
 /* Elementos activos */
 .active {
     -fx-background-color: #9f84bd;
-    -fx-text-fill: #181818;
+    -fx-text-fill: #fafafa;
 }
 
 /* Elementos inactivos */
@@ -169,7 +169,8 @@
 
 /* Hover effects */
 .hoverable:hover {
-    -fx-background-color: #ebdccb;
+    -fx-background-color: #9f84bd;
+    -fx-text-fill: #fafafa;
 }
 
 /* Tags */
